force-app/main/default/objects/Customer_Task_Configuration__c/Customer_Task_Configuration__c.object-meta.xml
<CustomObject>
    <description>Customer Task Configuration for implementing Push 2 App feature</description>
    <label>Customer Task Configuration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Task Configuration</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>