force-app/main/default/objects/Customer_Task_Configuration__c/fields/AEM_Content_Id__c.field-meta.xml
<CustomField>
    <fullName>AEM_Content_Id__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - AEM</complianceGroup>
    <description>Used to store the content Id from AEM.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AEM Content Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>