force-app/main/default/objects/Customer_Task_Configuration__c/fields/Applicable_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Record_Types__c</fullName>
    <complianceGroup>Integrity - Trusted;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>Applicable RT of the SObject for which the configuration is valid</description>
    <label>Applicable Record Types</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>SObject_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account_Closure</fullName>
                <label>Account Closure</label>
            </value>
            <value>
                <fullName>ANZx_Complaint</fullName>
                <label>ANZ Plus Complaint</label>
            </value>
            <value>
                <fullName>ATM_Dispute</fullName>
                <label>ATM</label>
            </value>
            <value>
                <fullName>BPAY_Dispute</fullName>
                <label>BPAY</label>
            </value>
            <value>
                <fullName>Card_Dispute</fullName>
                <label>Card</label>
            </value>
            <value>
                <fullName>CFMS_Migrated_Case</fullName>
                <label>CFMS Migrated Case</label>
            </value>
            <value>
                <fullName>Credit_Referral</fullName>
                <label>Credit Referral</label>
            </value>
            <value>
                <fullName>Customer_Complaint</fullName>
                <label>Customer Complaint</label>
            </value>
            <value>
                <fullName>Customer_Feedback</fullName>
                <label>Customer Feedback</label>
            </value>
            <value>
                <fullName>Direct_Debit_Dispute</fullName>
                <label>Direct Debit</label>
            </value>
            <value>
                <fullName>Direct_Entry_Dispute</fullName>
                <label>Direct Entry</label>
            </value>
            <value>
                <fullName>False_Customer_Profile</fullName>
                <label>False Customer Profile</label>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Fraud_Check</fullName>
                <label>Fraud Check</label>
            </value>
            <value>
                <fullName>General_Inquiry</fullName>
                <label>General Enquiry</label>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>ID_Ops_Assistance</fullName>
                <label>ID Ops Assistance</label>
            </value>
            <value>
                <fullName>KYC_QA</fullName>
                <label>KYC QA</label>
            </value>
            <value>
                <fullName>Non_Customer_Complaint</fullName>
                <label>Non-Customer Complaint</label>
            </value>
            <value>
                <fullName>NPP_Dispute</fullName>
                <label>NPP</label>
            </value>
            <value>
                <fullName>PIN_Recovery</fullName>
                <label>PIN Recovery</label>
            </value>
            <value>
                <fullName>Profile_Update</fullName>
                <label>Profile Update</label>
            </value>
            <value>
                <fullName>Recipient_Mule</fullName>
                <label>Recipient/Mule</label>
            </value>
            <value>
                <fullName>Scam</fullName>
            </value>
            <value>
                <fullName>Selfie_Recovery</fullName>
                <label>Selfie Recovery</label>
            </value>
            <value>
                <fullName>Systemic_Issue</fullName>
                <label>Systemic Issue</label>
            </value>
            <value>
                <fullName>General_Inquiry_CMOS</fullName>
                <label>Unauthenticated Enquiry</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>