force-app/main/default/objects/Customer_Task_Configuration__c/fields/Applicable_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Applicable_User_Role__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Applicable User Role  for which the configuration is valid</description>
    <label>Applicable User Role</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Support_Coach</fullName>
                <label>Support Coach</label>
            </value>
            <value>
                <fullName>Coach_Lead</fullName>
                <label>Coach Lead</label>
            </value>
            <value>
                <fullName>BOH_Coach</fullName>
                <label>BOH Coach</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>