force-app/main/default/objects/Customer_Task_Configuration__c/fields/Expire_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Expire_After_Days__c</fullName>
    <complianceGroup>Integrity_Trusted;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Configuration to store after how many days this task should expire.</description>
    <label>Expire After Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>