force-app/main/default/objects/Customer_Task_Configuration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>SObject_Type__c</columns>
    <columns>Applicable_Record_Types__c</columns>
    <columns>Applicable_User_Role__c</columns>
    <columns>AEM_Content_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>